# SPART_SIMUTools_2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: benchmark_config.yaml  default_config.yaml
results/ablation/: ablation_summary.json  per_frame_ablation.csv
results/benchmark/: benchmark_summary.json
results/fidelity/: fidelity_summary.json  per_frame_fidelity.csv
results/grid_crossover/: grid_crossover_summary.json  per_condition_means.csv
results/synthetic_demo/: demo_fidelity.json  demo_pointcloud.csv  demo_summary.json
scripts/: exp1_fidelity.py  exp2_ablation.py  exp3_main_benchmark.py  exp4_grid_crossover.py  exp5_synthetic_demo.py  sanity_check.py
spart/: __init__.py  __main__.py  core.py  scan_kernel.py  utils.py  vanilla_kernel.py
tests/: test_step1_utils.py  test_step2_kernel.py  test_step3_vanilla.py  test_step5_core.py
